--- a/custom.css
+++ b/custom.css
@@ -35,3 +35,53 @@ body {
 .ck-editor__editable {
 	min-height: 400px;
 }
+
+@font-face {
+  font-family: 'icomoon';
+  src:
+    url('fonts/icomoon.ttf?l4lvyo') format('truetype'),
+    url('fonts/icomoon.woff?l4lvyo') format('woff'),
+    url('fonts/icomoon.svg?l4lvyo#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-file-text:before {
+  content: "\e922";
+}
+.icon-file-text2:before {
+  content: "\e926";
+}
+.icon-credit-card:before {
+  content: "\e93f";
+}
+.icon-lab:before {
+  content: "\e9aa";
+}
+.icon-plus:before {
+  content: "\ea0a";
+}
+.icon-info:before {
+  content: "\ea0c";
+}
+.icon-cross:before {
+  content: "\ea0f";
+}
+.icon-github:before {
+  content: "\eab0";
+}
